
- Core:
  . Fixed bug GH-9752 (Generator crashes when interrupted during argument
    evaluation with extra named params). (Arnaud)
  . Fixed bug GH-9801 (Generator crashes when memory limit is exceeded during
    initialization). (Arnaud)

- Date:
  . Fixed bug GH-9763 (DateTimeZone ctr mishandles input and adds null byte if
    the argument is an offset larger than 100*60 minutes). (Derick)

- SOAP:
  . Fixed GH-9720 (Null pointer dereference while serializing the response).
    (cmb)

27 Oct 2022, PHP 8.0.25

- Session:
  . Fixed bug GH-9583 (session_create_id() fails with user defined save handler
    that doesn't have a validateId() method). (Girgias)

- Streams:
  . Fixed bug GH-9590 (stream_select does not abort upon exception or empty
    valid fd set). (Arnaud)

29 Sep 2022, PHP 8.0.24

- Core:
  . Fixed bug GH-9323 (Crash in ZEND_RETURN/GC/zend_call_function)
    (Tim Starling)
  . Fixed bug GH-9361 (Segmentation fault on script exit #9379). (cmb,
    Christian Schneider)
  . Fixed bug GH-9407 (LSP error in eval'd code refers to wrong class for static
    type). (ilutov)
  . Fixed bug #81727: Don't mangle HTTP variable names that clash with ones
    that have a specific semantic meaning. (CVE-2022-31629). (Derick)

- DOM:
  . Fixed bug #79451 (DOMDocument->replaceChild on doctype causes double free).
    (Nathan Freeman)

- FPM:
  . Fixed bug GH-8885 (FPM access.log with stderr begins to write logs to
    error_log after daemon reload). (Dmitry Menshikov)
  . Fixed bug #77780 ("Headers already sent..." when previous connection was
    aborted). (Jakub Zelenka)

- GMP
  . Fixed bug GH-9308 (GMP throws the wrong error when a GMP object is passed
    to gmp_init()). (Girgias)

- Intl
  . Fixed bug GH-9421 (Incorrect argument number for ValueError in NumberFormatter).
    (Girgias)

- PDO_PGSQL:
  . Fixed bug GH-9411 (PgSQL large object resource is incorrectly closed).
    (Yurunsoft)

- Phar: